[metadata]
name = youtube_community_tab
version = 0.2.1
description = A python3 module to handle YouTube Community Tab

[options]
package_dir =
	=src
packages = find:
install_requires =
	requests_cache
python_requires = >=3.7

[options.packages.find]
where=src

[egg_info]
egg_base = /tmp
